--- a/build.gradle
+++ b/build.gradle
@@ -40,14 +40,18 @@ dependencies {
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
 	
-	//java -selenium dependency
-	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.11.0'
+	// https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java
+	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
 	
 	// https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin
 	compile group: 'org.apache.maven.plugins', name: 'maven-surefire-plugin', version: '3.0.0-M5'
 	
 	// https://mvnrepository.com/artifact/org.testng/testng
 	testCompile group: 'org.testng', name: 'testng', version: '7.3.0'
+	
+	// https://mvnrepository.com/artifact/com.aventstack/extentreports
+	compile group: 'com.aventstack', name: 'extentreports', version: '5.0.1'
+	
 
 
 	
@@ -57,7 +61,9 @@ dependencies {
 	dependsOn 'cleanTest'
 	useTestNG() {
 	// runlist to executed. path is relative to current folder
+	useDefaultListeners = true
 	suites 'TestNG.xml'
+	//includeGroups 'smoke', 'sanity'
 }
     testLogging {
         events "PASSED", "FAILED", "SKIPPED"
